k8s-config/ingress/ingress.yaml
# Ingress configurations for routing to different services.
apiVersion: networking.k8s.io/v1
kind: Ingress
namespace: showcase-rv-hub
metadata:
  name: showcase-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hub.showcaserv.com
    http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
      - path: /express
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 3001
      - path: /webapi
        pathType: Prefix
        backend:
          service:
            name: webapi-service
            port:
              number: 5000
      - path: /email
        pathType: Prefix
        backend:
          service:
            name: email-service
            port:
              number: 6000
  tls:
  - hosts: hub.showcaserv.com
    secretName: my.tls.secret
